[gd_scene load_steps=3 format=3 uid="uid://br20utobbc302"]

[ext_resource type="Script" path="res://game/scenes/tester.gd" id="1_osnom"]
[ext_resource type="PackedScene" uid="uid://d2tu2qgth8he6" path="res://core/game_objects/blue_enemy.tscn" id="2_urwhs"]

[node name="CollisionTesting" type="Node2D"]
script = ExtResource("1_osnom")

[node name="BlueEnemy" parent="." instance=ExtResource("2_urwhs")]
position = Vector2(88, 40)

[node name="BlueEnemy2" parent="." instance=ExtResource("2_urwhs")]
modulate = Color(1, 1, 1, 0.317647)
position = Vector2(80, 24)

[node name="BlueEnemy3" parent="." instance=ExtResource("2_urwhs")]
modulate = Color(1, 1, 1, 0.317647)
position = Vector2(96, 24)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -40.0
offset_top = -16.0
offset_right = 24.0
offset_bottom = 16.0
rotation = 3.14159
pivot_offset = Vector2(32, 16)
color = Color(1, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = -24.0
offset_top = -16.0
offset_right = 41.0
offset_bottom = 12.0
rotation = 0.523598
pivot_offset = Vector2(32, 16)
color = Color(0, 1, 0, 1)
